clusters/home/argocd/ingress.yaml
# https://argocd.lan/ (Traefik + mkcert argocd-tls). gethomepage annotations
# let Homepage auto-discover it.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Argo CD"
    gethomepage.dev/description: "GitOps continuous delivery"
    gethomepage.dev/group: "Infra"
    gethomepage.dev/icon: "argo-cd.png"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=argocd-server"
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - secretName: argocd-tls
      hosts:
        - argocd.lan
